Fix header alignment position
Instead of using padding to spread the content on the header around. I found it better to use justify content and gap properties to find a solution.

--- a/style.css
+++ b/style.css
@@ -2,22 +2,21 @@ body {
     height:100vh;
     display:flex;
     flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
     margin:0;
 }
 
 header {
     display:flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    gap:275px;
     margin-bottom:50px;
     font-weight: 700;
     color: white;
 }
 
 .top-section {
-    padding-left:130px;
-    padding-right:130px;
     padding-bottom:100px;
     background-color: rgb(40, 35, 46);
     color: white;
@@ -29,25 +28,24 @@ header {
     gap:15px;
 }
 
-.heading {
+.heading,
+.heading2 {
     font-size: 30px;
     font-weight:bold;
     margin-bottom:5px;
 }
 
 .heading2 {
-    font-size: 25px;
-    font-weight:bold;
-    margin-bottom:5px;
     text-align: center;
+    font-size: 25px;
     margin-top: 20px;
     margin-bottom:20px;
 }
-.flex-container {
+.print-options {
     display: flex;
     justify-content: center;
-    gap: 30px;
-    margin-bottom: 120px;
+    gap: 25px;
+    padding-bottom: 65px;
     text-align: center;
 }
 
@@ -66,9 +64,8 @@ header {
 
 .container-block {
     background-color: rgb(216, 196, 224);
-    height:270px;
     display:flex;
-    flex-shrink:0;
+    padding:50px;
     align-items: center;
     justify-content: center;
 }
@@ -95,30 +92,26 @@ header {
 }
 .content1 {
     display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.sign-up {
+.get-quote {
     display:flex;
     flex-direction: column;
-    flex-grow:0;
-    flex-shrink:0;
     width: 330px;
+    flex-shrink:0;
 }
 
-.img-main {
-    background-color:grey;
-    width:500px;
-    margin-left:20px;
-    text-align: center;
+.main-img {
+    width:250px;
+    padding-left:50px;
 }
-
 .action-container {
     display: flex;
     height: 200px;
     justify-content: center;
     align-items: center;
-    flex-shrink:0;
-    flex-grow:0;
 }
 
 .action {
@@ -173,7 +166,14 @@ header {
 .footer-container {
     display: flex;
     background-color:rgb(40, 35, 46);
-    height: 70px;
     justify-content: center;
     align-items: center;
+    padding:35px;
+}
+
+.bottom-container {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    flex:1;
 }
